--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -18,8 +18,12 @@
   }
   
   .logo {
-    width: 60px;
-  }
+    width: 250px; /* Increased from 60px to 100px */
+    padding: 10px;
+    padding-left: 30px; /* Added right padding */
+
+}
+
   
   .navbar ul li {
     display: inline-block;
