--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,3 @@
-/* Components/Navbar/Navbar.css */
-
 .navbar {
   width: 100%;
   color: #fff;
@@ -71,7 +69,7 @@
   .menu-icon .bar {
       width: 25px;
       height: 3px;
-      background-color: #fff;
+      background-color: #ffffff;
       margin: 5px;
       transition: 0.4s;
   }
