general content update

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -13,7 +13,8 @@
     flex-basis: 56%;
 }
 .about-img{
-    width: 100%;
+    width: 80%;
+    height: 50%;
     border-radius: 10px;
 }
 .play-icon{
