--- a/src/Components/video/VideoSection.css
+++ b/src/Components/video/VideoSection.css
@@ -1,13 +1,25 @@
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+video {
+  position: absolute;
+  width: 100%;
+  max-width: 100%;
+  height: auto; 
+  object-fit: cover;
   
+}
+
+@media (max-width: 768px) {
   .video-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: none; /
   }
-  
+
   video {
-    width:100%; 
-    max-width: 100%; 
-    height: 100%;
+    width: 100%; 
+    height: auto;
   }
+}
