--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Outfit", sans-serif;
     scroll-behavior: smooth;
 }
-body{
-    background: #F5F5F5;
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
+    background: #f5f5f5;
 }
-a{
+
+a {
     text-decoration: none;
     color: inherit;
     line-height: 1;
     cursor: pointer;
 }
-.container{
+
+.container {
     padding-left: 0%;
     padding-right: 0%;
+    max-width: 100%; 
+    margin: 0 auto;  
 }
-.btn{
+
+.btn {
     background: white;
     color: #04055e;
     padding: 10px 18px;
@@ -34,15 +41,30 @@ a{
     justify-content: center;
     transition: all 300ms ease-in;
 }
+
 .btn:hover {
     cursor: pointer;
     transform: scale(1.1);
 }
-.btn img{
+
+.btn img {
     width: 20px;
     margin-left: 10px;
 }
-.btn.dark-btn{
+
+.btn.dark-btn {
     background: #212EA0;
     color: #fff;
+}
+
+
+@media (max-width: 768px) {
+    .container {
+        padding-left: 35px; 
+        padding-right: 35px;
+    }
+
+    .btn {
+        font-size: 14px;  
+    }
 }
