--- a/src/Components/video/VideoSection.css
+++ b/src/Components/video/VideoSection.css
@@ -1,25 +1,13 @@
-.video-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-video {
-  position: absolute;
-  width: 100%;
-  max-width: 100%;
-  height: auto; 
-  object-fit: cover;
   
-}
-
-@media (max-width: 768px) {
   .video-container {
-    padding: none; /
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
+  
   video {
     width: 100%; 
-    height: auto;
+    max-width: 100%; 
+    height: 100%;
   }
-}
